--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.40",
+    "babel-polyfill": "^6.26.0",
+    "browserify": "^16.1.1",
     "react-scripts": "1.0.10"
   },
   "scripts": {
