--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "aphrodite": "^1.2.3",
-    "gulp": "^3.9.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
@@ -16,9 +15,29 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^8.0.0",
     "browserify": "^16.1.1",
-    "react-scripts": "1.0.10"
+    "browserify-css": "^0.14.0",
+    "codemirror": "^5.35.0",
+    "cssify": "^1.0.3",
+    "fancy-log": "^1.3.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-react": "^3.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^1.0.1",
+    "react-scripts": "1.0.10",
+    "urify": "^2.1.0",
+    "vinyl-source-stream": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
